--- a/app/src/main/res/layout/fragment_registration.xml
+++ b/app/src/main/res/layout/fragment_registration.xml
@@ -100,12 +100,10 @@
 
             <Button
                 android:id="@+id/register_button"
-                style="?android:textAppearanceSmall"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="16dp"
-                android:text="@string/register_hint"
-                android:textStyle="bold" />
+                android:text="@string/register_hint" />
 
         </LinearLayout>
     </ScrollView>
