--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -6,4 +6,15 @@
     <color name="colorFont">#6E6E6E</color>
     <color name="colorHintFont">#BDBDBD</color>
     <color name="black_overlay">#66000000</color>
+    <!--Button Font Colors-->
+    <color name="btnDefaultFont">#6E6E6E</color>
+    <color name="btnFocusedFont">#FF0000</color>
+    <color name="btnPressedFont">#0000FF</color>
+    <!--Button Font Colors-->
+    <color name="btnDefaultBackground">#6E6E6E</color>
+    <color name="btnFocusedBackground">#FF0000</color>
+    <color name="btnPressedBackground">#0000FF</color>
+    <!--EditText Font Colors-->
+    <color name="editTextFont">#6E6E6E</color>
+    <color name="editTextHintFont">#BDBDBD</color>
 </resources>
