--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,6 +3,10 @@
     <color name="colorPrimary">#848484</color>
     <color name="colorPrimaryDark">#6E6E6E</color>
     <color name="colorAccent">#FF0000</color>
+
+    <!--Toolbar-->
+    <color name="toolbarFont">#6E6E6E</color>
+
     <color name="colorFont">#6E6E6E</color>
     <color name="colorHintFont">#BDBDBD</color>
     <color name="black_overlay">#66000000</color>
