--- a/app/src/main/res/menu/toolbar_menu.xml
+++ b/app/src/main/res/menu/toolbar_menu.xml
@@ -2,5 +2,6 @@
 <menu
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
+    <item android:id="@+id/logout" android:title="@string/logout"/>
     <item android:id="@+id/mika" android:title="@string/mika" android:icon="@drawable/mika" app:showAsAction="ifRoom|withText" />
 </menu>
