--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -1,4 +1,5 @@
 <resources>
+    <!--Main theme with custom AppBar-->
     <style name="MyAppTheme" parent="Theme.AppCompat.Light.NoActionBar">
         <!--Colors-->
         <item name="colorPrimary">@color/colorPrimary</item>
@@ -17,6 +18,7 @@
         <item name="android:windowBackground">@mipmap/ic_launcher</item>
     </style>
 
+    <!--Login theme with default AppBar-->
     <style name="LoginScreenTheme" parent="Theme.AppCompat.Light.DarkActionBar">
         <!--Colors-->
         <item name="colorPrimary">@color/colorPrimary</item>
@@ -50,6 +52,7 @@
 
     <style name="ButtonStyle" parent="@android:style/Widget.Button">
         <item name="android:textColor">@color/color_button_font</item>
+        <!--<item name="android:font">@font/font_button</item> api lvl not high enough-->
     </style>
 
 </resources>
