--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,6 +7,9 @@
     <!--Toolbar-->
     <color name="toolbarFont">#6E6E6E</color>
 
+    <!--Tab-->
+    <color name="selectedTabFont">#6E6E6E</color>
+
     <color name="colorFont">#6E6E6E</color>
     <color name="colorHintFont">#BDBDBD</color>
     <color name="black_overlay">#66000000</color>
