--- a/app/src/main/res/layout/fragment_list.xml
+++ b/app/src/main/res/layout/fragment_list.xml
@@ -2,7 +2,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.example.leon.myapp.Views.Main.ListFragment">
+    tools:context="com.example.leon.myapp.Views.Main.DefaultList.ListFragment">
 
     <ListView
         android:id="@android:id/list"
