added expanded notification

--- a/app/src/main/res/layout/activity_notification.xml
+++ b/app/src/main/res/layout/activity_notification.xml
@@ -25,4 +25,10 @@
         android:id="@+id/btnCreateExpandedNotification"
         android:text="@string/create_expanded_notification" />
 
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/btnCreateCustomNotification"
+        android:text="@string/create_custom_notification" />
+
 </LinearLayout>
