--- a/app/src/main/res/layout/fragment_practice.xml
+++ b/app/src/main/res/layout/fragment_practice.xml
@@ -16,4 +16,10 @@
         android:id="@+id/btnLoadNotificationActivity"
         android:text="@string/load_notification_activity"/>
 
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/btnLoadNavigationDrawerActivity"
+        android:text="@string/load_navigation_drawer_activity"/>
+
 </LinearLayout>
