--- a/app/src/main/res/menu/drawer_menu.xml
+++ b/app/src/main/res/menu/drawer_menu.xml
@@ -1,21 +1,62 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
-    <group android:checkableBehavior="single">
-        <item
-            android:id="@+id/nav_mercury"
-            android:icon="@drawable/mercury"
-            android:title="@string/mercury" />
-        <item
-            android:id="@+id/nav_venus"
-            android:icon="@drawable/venus"
-            android:title="@string/venus" />
-        <item
-            android:id="@+id/nav_earth"
-            android:icon="@drawable/earth"
-            android:title="@string/earth" />
-        <item
-            android:id="@+id/nav_mars"
-            android:icon="@drawable/mars"
-            android:title="@string/mars" />
-    </group>
+    <item android:title="@string/planets">
+        <menu>
+            <group android:checkableBehavior="single">
+                <item
+                    android:id="@+id/nav_mercury"
+                    android:icon="@drawable/mercury"
+                    android:title="@string/mercury" />
+                <item
+                    android:id="@+id/nav_venus"
+                    android:icon="@drawable/venus"
+                    android:title="@string/venus" />
+                <item
+                    android:id="@+id/nav_earth"
+                    android:icon="@drawable/earth"
+                    android:title="@string/earth" />
+                <item
+                    android:id="@+id/nav_mars"
+                    android:icon="@drawable/mars"
+                    android:title="@string/mars" />
+            </group>
+        </menu>
+    </item>
+
+    <item android:title="@string/different">
+         <menu>
+            android:id="@+id/nav_camera"
+            android:icon="@drawable/ic_menu_camera"
+            android:title="Import" />
+             <group android:checkableBehavior="single">
+                <item
+                    android:id="@+id/nav_gallery"
+                    android:icon="@drawable/ic_menu_gallery"
+                    android:title="@string/gallery" />
+                <item
+                    android:id="@+id/nav_slideshow"
+                    android:icon="@drawable/ic_menu_slideshow"
+                    android:title="@string/slideshow" />
+                <item
+                    android:id="@+id/nav_manage"
+                    android:icon="@drawable/ic_menu_manage"
+                    android:title="@string/tools" />
+             </group>
+        </menu>
+    </item>
+
+    <item android:title="@string/communicate">
+        <menu>
+            <group android:checkableBehavior="single">
+                <item
+                    android:id="@+id/nav_share"
+                    android:icon="@drawable/ic_menu_share"
+                    android:title="@string/share" />
+                <item
+                    android:id="@+id/nav_send"
+                    android:icon="@drawable/ic_menu_send"
+                    android:title="@string/send" />
+            </group>
+        </menu>
+    </item>
 </menu>
