--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -6,6 +6,9 @@
         <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
         <item name="colorAccent">@color/colorAccent</item>
 
+        <!--Animations-->
+        <item name="android:windowAnimationStyle">@style/MyAnimationStyle</item>
+
         <!--Controls-->
         <item name="android:toolbarStyle">@style/ToolbarStyle</item>
         <item name="editTextStyle">@style/EditTextStyle</item>
@@ -18,12 +21,23 @@
         <item name="android:windowBackground">@mipmap/ic_launcher</item>
     </style>
 
+    <!--Animation style-->
+    <style name="MyAnimationStyle" parent="@android:style/Animation.Activity">
+        <item name="android:activityOpenEnterAnimation">@anim/slide_in_right</item>
+        <item name="android:activityOpenExitAnimation">@anim/slide_out_left</item>
+        <item name="android:activityCloseEnterAnimation">@anim/slide_in_left</item>
+        <item name="android:activityCloseExitAnimation">@anim/slide_out_right</item>
+    </style>
+
     <!--Login theme with default AppBar-->
     <style name="LoginScreenTheme" parent="Theme.AppCompat.Light.DarkActionBar">
         <!--Colors-->
         <item name="colorPrimary">@color/colorPrimary</item>
         <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
         <item name="colorAccent">@color/colorAccent</item>
+
+        <!--Animations-->
+        <item name="android:windowAnimationStyle">@style/MyAnimationStyle</item>
 
         <!--Controls-->
         <item name="android:toolbarStyle">@style/ToolbarStyle</item>
