--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -9,7 +9,7 @@
     android:paddingLeft="16dp"
     android:paddingRight="16dp"
     android:paddingTop="16dp"
-    tools:context=".Views.Login.LoginActivityView">
+    tools:context=".Views.Login.LoginActivity">
 
     <ScrollView
         android:layout_width="match_parent"
