--- a/app/src/main/res/layout/activity_custom_navigation_drawer.xml
+++ b/app/src/main/res/layout/activity_custom_navigation_drawer.xml
@@ -39,7 +39,7 @@
 
             <ListView
                 android:id="@+id/navigation_drawer_list_view"
-                android:layout_width="72dp"
+                android:layout_width="84dp"
                 android:layout_height="wrap_content"
                 android:background="@android:color/transparent"
                 android:cacheColorHint="@android:color/transparent"
@@ -49,10 +49,11 @@
 
             <ListView
                 android:id="@+id/navigation_drawer_menu_list_view"
-                android:layout_width="wrap_content"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:background="@android:color/transparent"
                 android:cacheColorHint="@android:color/transparent"
+                android:choiceMode="singleChoice"
                 android:fastScrollEnabled="true"
                 android:persistentDrawingCache="scrolling"
                 android:scrollingCache="false"/>
