--- a/app/src/main/res/layout/navigation_drawer_custom_list_item.xml
+++ b/app/src/main/res/layout/navigation_drawer_custom_list_item.xml
@@ -2,13 +2,22 @@
 <LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:orientation="horizontal">
+
+    <ImageView
+        android:id="@+id/navigation_drawer_custom_list_item_image_view"
+        android:layout_width="12dp"
+        android:layout_height="48dp"
+        android:layout_marginTop="12dp"
+        android:layout_marginBottom="12dp"
+        android:src="@drawable/rectangle"
+        android:visibility="invisible"/>
 
     <ImageButton
         android:id="@+id/navigation_drawer_custom_list_item_image_button"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:scaleType="fitCenter"
-        android:adjustViewBounds="true"/>
+        android:layout_width="72dp"
+        android:layout_height="72dp"
+        android:scaleType="fitCenter"/>
 
 </LinearLayout>
