fixed bug at highlighting

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -27,4 +27,5 @@
 
     <!--ListView Font Colors-->
     <color name="listViewHighlighted">#F0F0F5</color>
+    <color name="listViewLoaded">#F78C00</color>
 </resources>
