--- a/app/src/main/res/layout/fragment_practice.xml
+++ b/app/src/main/res/layout/fragment_practice.xml
@@ -28,4 +28,9 @@
         android:id="@+id/btnLoadCustomNavigationDrawerActivity"
         android:text="@string/load_custom_navigation_drawer_activity"/>
 
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/btnEnterPIPMode"
+        android:text="@string/enter_pip_mode"/>
 </LinearLayout>
