--- a/app/src/main/res/layout/activity_drag_and_drop.xml
+++ b/app/src/main/res/layout/activity_drag_and_drop.xml
@@ -1,13 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="horizontal"
     tools:context="com.example.leon.myapp.Views.Main.Practice.DragAndDrop.DragAndDropActivity">
 
     <android.support.v7.widget.RecyclerView
-        android:layout_gravity="left"
         android:id="@+id/drag_drop_recycler_view"
         android:layout_width="wrap_content"
         android:layout_height="match_parent"
@@ -19,4 +19,4 @@
         android:layout_height="match_parent"
         android:orientation="horizontal"/>
 
-</android.support.constraint.ConstraintLayout>
+</LinearLayout>
