fixed bug with the height of some fragments filling the screen

--- a/app/src/main/res/layout/activity_drag_and_drop.xml
+++ b/app/src/main/res/layout/activity_drag_and_drop.xml
@@ -17,6 +17,7 @@
         android:id="@+id/drag_drop_linear_layout"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:orientation="horizontal"/>
+        android:scrollbars="vertical"
+        android:orientation="vertical"/>
 
 </LinearLayout>
