--- a/app/src/main/res/layout/custom_my_app_widget_provider.xml
+++ b/app/src/main/res/layout/custom_my_app_widget_provider.xml
@@ -1,15 +1,27 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical"
+    android:orientation="horizontal"
     android:padding="@dimen/widget_margin"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
+
+    <ImageView
+        android:id="@+id/app_widget_test_image_view"
+        android:layout_width="48dp"
+        android:layout_height="48dp"
+        android:src="@drawable/mika"/>
 
     <Button
         android:id="@+id/app_widget_test_button"
         android:layout_height="wrap_content"
         android:layout_width="wrap_content"
         android:text="@string/test_button"/>
+
+    <TextView
+        android:id="@+id/app_widget_test_text_view"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="NO UPDATE CALLED"/>
 
 </LinearLayout>
