--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -28,4 +28,7 @@
     <!--ListView Font Colors-->
     <color name="listViewHighlighted">#F0F0F5</color>
     <color name="listViewLoaded">#F78C00</color>
+
+    <!--Notification-->
+    <color name="light_color">#FF0000</color>
 </resources>
